--- a/css/contact.css
+++ b/css/contact.css
@@ -7,6 +7,7 @@
     font-optical-sizing: auto;
     font-style: normal;
     text-decoration: none;
+    scroll-behavior: smooth;
 }
 :root {
     --bg-utama:#FFFFFF;
