--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ article .article-teks h5{
 /* Best Seller */
 .container-best-seller{
     padding: 35px 80px;
-    background-color: var(--bg-utama);
+    background-color: var(--bold-text);
 }
 .title-best-seller{
     text-align: center;
@@ -177,7 +177,7 @@ article .article-teks h5{
     font-family: "My Soul", cursive;
     font-weight: 400;
     font-size: 35px;
-    color: #e4e4e4e4;
+    color: #6D6D6D;
     line-height: 10px;
 }
 .title-best-seller p{
@@ -216,7 +216,7 @@ article .article-teks h5{
     gap: 50px;
 }
 .best-seller{
-    background-color: #DCDCDC;
+    background-color: rgb(179, 179, 179);
     position: relative;
     z-index: 1;
     height: 255px;
@@ -224,6 +224,7 @@ article .article-teks h5{
     border-radius: 55px 55px 15px 15px;
     text-align: center ;
     padding: 0 10px;
+    outline: 2px solid #000000;
 }
 
 .best-seller.big{
@@ -301,7 +302,7 @@ figure{
     height: 240px;
     margin: 10px;
     border-radius: 7px;
-    border: 1px solid blue;
+    border: 3px solid rgb(36, 36, 243);
 }
 
 /* Footer */
